# rppg-deepfake-detection

./: .gitignore  README.md  copy_random_files.py  main.py  pyproject.toml
src/: config.py  dataloader.py  engine.py  model.py  preprocess_data.py  processor.py  utils.py  visualizer.py
